--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,8 +1,9 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
+
   <!-- *ngFor > 이게 바로 for문 Directive -->
   <!-- (click) > 이게 바로 Event-binding          onSelect 함수 -->
-  <!-- [class.selected] > 이게 바로 property-binding -->
+  <!-- [class.selected] > 이게 바로 property-binding         css -->
   <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)" >
     <span class="badge">{{hero.id}}</span>{{hero.name}}
   </li>
