--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -46,3 +46,20 @@
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
+
+.heroes a {
+  color: #888; text-decoration: none;
+  position: relative; display: block; width: 250px;
+}
+.heroes a:hover { color:#607D8B;}
+button {
+  background-color: #eee; border: none;
+  padding: 5px 10px; border-radius: 4px;
+  cursor: pointer; cursor: hand;
+  font-family: Arial;
+}
+button:hover{ background-color: #cfd8dc; }
+button.delete{
+  position: relative; left: 194px;
+  top: -32px; background-color: gray !important; color: white;
+}
