--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,11 +1,27 @@
 <h2>My Heroes</h2>
+
+<div>
+  <label>Hero name:
+    <input #heroName/>
+  </label>
+  <!--(click) passes input value to add() and then clears the input -->
+  <button (click)="add(heroName.value); heroName.value=''">
+  add
+  </button>
+</div>
+
 <ul class="heroes">
 
   <!-- *ngFor > 이게 바로 for문 Directive -->
   <!-- (click) > 이게 바로 Event-binding          onSelect 함수 -->
   <!-- [class.selected] > 이게 바로 property-binding         css -->
-  <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)" >
-    <span class="badge">{{hero.id}}</span>{{hero.name}}
+
+  <!--<li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)" >-->
+  <li *ngFor="let hero of heroes" >
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span>{{hero.name}}
+    </a>
+    <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
   </li>
 </ul>
 
